putting simple paragraphs in my html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>first_commit</title>
 </head>
 <body>
     <h1>This is my first Commit and I really want to improve this</h1>
+<!--hahaha praktis praktis praktis sata para ma maayu ta hehehehe-->
+    <p>this commit will have no css or javascript since its only a pracitice</p>
 </body>
 </html>
