--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <h1>This is my first Commit and I really want to improve this</h1>
 <!--hahaha praktis praktis praktis sata para ma maayu ta hehehehe-->
     <p>this commit will have no css or javascript since its only a pracitice</p>
+<h1><em>Tips to be Pro at Coding</em></h1>  
+    <ul>
+      <li><strong>Consistency</strong></li>
+      <li><strong>Perseverance</strong></li>
+      <li><strong>Patience</strong></li>
+  </ul> 
 </body>
 </html>
